import 'package:flutter/material.dart';

class Developer {
  String firstName;
  String lastName;

  Developer({
    @required this.firstName,
    @required this.lastName,
  });
}
