import 'package:flutter/material.dart';

class App {
  String name;
  String version;

  App({
    @required this.name,
    @required this.version,
  });
}
